tests/check/no_wait.co
// RUN: not choreo %s 2>&1| FileCheck %s

__co__ void foo(s8 [1, 2] input) {
  parallel p by 1 {
    f = dma.copy.async input => global;
    f0 = dma.any;
    f1 = dma.any;
    with f in [1] {
      foreach f {
        f1 = dma.copy.async input => local;
        f2 = dma.copy.async input => local;
        swap(f0, f1);
      }
    }
  }
}

// CHECK: error: some asyncs are not explicitly waited: ::foo{{(::paraby_[0-9]+)*}}::f, ::foo{{(::paraby_[0-9]+)*}}::within_0::foreach_0::f2.
// CHECK: Totally 1 errors have been detected.
